--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Andehou Blog
+title: 安德猴的博客
 SEOTitle: 安德猴的博客 | Andehou Blog
 header-img: img/post-bg-desk.jpg
 email: tasngxiaojun@gmail.com
